# internship_project

./: .dockerignore  .env.example  .gitignore  INTEGRATION_CHECKLIST.md  QUICKSTART.md  README.md  docker-compose.yml  git.sh  load_test.py  test_http.py
.agents/: AGENTS.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  database.py  docker-compose.yml  fix_logs.py  fix_queue.py  main.py  pyproject.toml  refactor_logs.py  requirements.txt  run.py  scratch_test_url.py  test_mq.py
backend/alembic/: env.py
backend/alembic/versions/: 25712a644e8e_add_description_to_projects.py  2d6062fe42ac_add_event_config_id_to_webhook_logs.py  36e805ba42a3_any_message.py  3ba4b69e3dd0_any_message.py  3d67030093b7_new_colom_add_in_event.py  4b9a2f1c7d8a_add_project_retention_days.py  65e65b53e8cc_any_message.py  af8e4e5bef13_any_message.py  b9d2a118191e_any_message.py  bc7a04cdabbc_any_message.py  c51a7d67c9bc_ok.py  fcf63a16eacc_add_missing_event_config_fields.py
backend/app/models/: __init__.py  company.py  event_config.py  project.py  webhook_event.py  webhook_log.py
backend/app/routers/: auth.py  company.py  gateway.py  logs.py  project.py  target_webhook.py
backend/app/schemas/: __init__.py  company.py  event_config.py  project.py  webhook_log.py
backend/app/services/: auth_ops.py  celery_worker.py  dependencies.py  failover.py  metrics_service.py  project_service.py  queue_client.py  redis_client.py
backend/app/utils/: security.py
frontend/: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  (+4 more)
(+25 files in other folders)
