[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.124.4",
    "pydantic[email]>=2.10.6",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.33.0",
    "httpx>=0.28.1",
    "bcrypt>=5.0.0",
    "pyjwt>=2.9.0",
    "psycopg2-binary>=2.9.10",
    "redis>=6.1.1",
    "aio-pika>=9.5.2",
    "cryptography>=47.0.0",
    "celery>=5.5.3",
    "pika>=1.4.1",
    "requests>=2.32.4",
    "python-multipart>=0.0.20",
    "jose>=1.0.0",
    "python-jose[cryptography]>=3.4.0",
    "pytest>=8.3.5",
]
